ajout nav + button page index.php

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <button type="button" class="btn btn-info">Info</button>
     <button type="button" class="btn btn-light">Light</button>
     <button type="button" class="btn btn-dark">Dark</button>
+    <button type="button" class="btn btn-dark">Dark</button>
 
     <button type="button" class="btn btn-link">Link</button>GIT ADD 666
     <h1 class="display-4 fst-italic text-center my-4">My First GIT/GITHUB Project</h1>
